; ModuleID = '/home/carl/AnghaBench/ccv/lib/3rdparty/sqlite3/extr_sqlite3.c_binaryCompareP5.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/3rdparty/sqlite3/extr_sqlite3.c_binaryCompareP5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32*, i32*, i32)* @binaryCompareP5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @binaryCompareP5(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = call i64 @sqlite3ExprAffinity(i32* %8)
  %10 = trunc i64 %9 to i8
  store i8 %10, i8* %7, align 1
  %11 = load i32*, i32** %4, align 8
  %12 = load i8, i8* %7, align 1
  %13 = call i64 @sqlite3CompareAffinity(i32* %11, i8 signext %12)
  %14 = trunc i64 %13 to i8
  %15 = sext i8 %14 to i32
  %16 = load i32, i32* %6, align 4
  %17 = trunc i32 %16 to i8
  %18 = sext i8 %17 to i32
  %19 = or i32 %15, %18
  %20 = trunc i32 %19 to i8
  store i8 %20, i8* %7, align 1
  %21 = load i8, i8* %7, align 1
  ret i8 %21
}

declare dso_local i64 @sqlite3ExprAffinity(i32*) #1

declare dso_local i64 @sqlite3CompareAffinity(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
